--- a/style.css
+++ b/style.css
@@ -540,6 +540,7 @@ footer .container {
   font-size: 14px;
   opacity: 0.8;
   margin-left: auto;
+  margin-bottom: 32px;
 }
 @media (max-width: 900px) {
   .footer-row {
